--- a/ios/Travel Safety/Modals/AddFeedbackViewController.xib
+++ b/ios/Travel Safety/Modals/AddFeedbackViewController.xib
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddFeedbackViewController">
             <connections>
+                <outlet property="cityLabel" destination="NZR-Gv-icP" id="ckk-IG-ILq"/>
+                <outlet property="cleanlinessStars" destination="Sxj-Yf-8Pa" id="XWV-W8-odl"/>
+                <outlet property="comfortStars" destination="JOH-t8-NBi" id="kQF-3z-iDs"/>
+                <outlet property="infoTextView" destination="EE3-Tl-32e" id="z8N-mE-MTL"/>
+                <outlet property="recommendSlider" destination="1Xb-lo-Jrc" id="hWp-EW-vaf"/>
+                <outlet property="safetyStars" destination="8AY-d7-GmL" id="XpG-hh-PYD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -37,10 +42,10 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="1Xb-lo-Jrc">
+                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="1Xb-lo-Jrc">
                     <rect key="frame" x="16" y="385" width="288" height="31"/>
-                    <color key="minimumTrackTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <color key="maximumTrackTintColor" red="0.28627452250000002" green="0.63137257099999999" blue="0.2392156869" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="minimumTrackTintColor" red="0.99607843137254903" green="0.792156862745098" blue="0.086274509803921567" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="maximumTrackTintColor" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
                 </slider>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Would you recommend?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSg-3c-8tl">
                     <rect key="frame" x="20" y="361" width="280" height="20.5"/>
@@ -84,71 +89,85 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="stars" translatesAutoresizingMaskIntoConstraints="NO" id="iqX-2Y-1jz">
-                    <rect key="frame" x="159" y="75" width="153" height="38.5"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8AY-d7-GmL" customClass="StarSelectView">
+                    <rect key="frame" x="150" y="80.5" width="150" height="28"/>
+                    <color key="backgroundColor" red="0.28627452250000002" green="0.63137257099999999" blue="0.2392156869" alpha="0.90007211539999998" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="38.5" id="9WI-mB-D7v"/>
-                        <constraint firstAttribute="width" secondItem="iqX-2Y-1jz" secondAttribute="height" multiplier="151:38" id="jVl-OK-osT"/>
+                        <constraint firstAttribute="width" constant="150" id="6ak-Z4-bR0"/>
+                        <constraint firstAttribute="height" constant="28" id="Qc1-fH-Hdk"/>
                     </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="stars" translatesAutoresizingMaskIntoConstraints="NO" id="4f1-9H-WoE">
-                    <rect key="frame" x="159" y="110" width="153" height="38.5"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sxj-Yf-8Pa" customClass="StarSelectView">
+                    <rect key="frame" x="150" y="115.5" width="150" height="28"/>
+                    <color key="backgroundColor" red="0.28627452250000002" green="0.63137257099999999" blue="0.2392156869" alpha="0.90007211539999998" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="4f1-9H-WoE" secondAttribute="height" multiplier="151:38" id="rop-n0-5do"/>
-                        <constraint firstAttribute="height" constant="38.5" id="tMB-Nf-7hr"/>
+                        <constraint firstAttribute="height" constant="33" id="Tii-Z1-g2c"/>
+                        <constraint firstAttribute="width" constant="150" id="w5F-f9-XYP"/>
                     </constraints>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="stars" translatesAutoresizingMaskIntoConstraints="NO" id="MKX-4f-IzC">
-                    <rect key="frame" x="159" y="146" width="153" height="38.5"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="w5F-f9-XYP"/>
+                            <exclude reference="Tii-Z1-g2c"/>
+                        </mask>
+                    </variation>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JOH-t8-NBi" customClass="StarSelectView">
+                    <rect key="frame" x="150" y="151.5" width="150" height="28"/>
+                    <color key="backgroundColor" red="0.28627452250000002" green="0.63137257099999999" blue="0.2392156869" alpha="0.90007211539999998" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="MKX-4f-IzC" secondAttribute="height" multiplier="151:38" id="Cno-zt-GB7"/>
-                        <constraint firstAttribute="height" constant="38.5" id="EV1-2a-UGx"/>
+                        <constraint firstAttribute="width" constant="150" id="RK3-Pc-KmY"/>
+                        <constraint firstAttribute="height" constant="33" id="wqS-fA-gh7"/>
                     </constraints>
-                </imageView>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="RK3-Pc-KmY"/>
+                            <exclude reference="wqS-fA-gh7"/>
+                        </mask>
+                    </variation>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="TSg-3c-8tl" firstAttribute="leading" secondItem="EE3-Tl-32e" secondAttribute="leading" id="0EI-xH-Fle"/>
                 <constraint firstItem="ob4-Nd-bEP" firstAttribute="leading" secondItem="osp-uu-lXX" secondAttribute="leading" id="0Qs-4E-Elc"/>
+                <constraint firstItem="mLj-Ga-YNR" firstAttribute="leading" secondItem="8AY-d7-GmL" secondAttribute="trailing" constant="20" id="0U0-iX-uQm"/>
+                <constraint firstItem="Sxj-Yf-8Pa" firstAttribute="leading" secondItem="8AY-d7-GmL" secondAttribute="leading" id="0ZU-OE-uB6"/>
+                <constraint firstItem="Sxj-Yf-8Pa" firstAttribute="height" secondItem="8AY-d7-GmL" secondAttribute="height" id="15k-UL-yll"/>
                 <constraint firstItem="1Xb-lo-Jrc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" constant="10" id="2Po-DV-kLb"/>
-                <constraint firstItem="MKX-4f-IzC" firstAttribute="width" secondItem="MKX-4f-IzC" secondAttribute="height" multiplier="151:38" id="3Se-RD-trM"/>
                 <constraint firstItem="osp-uu-lXX" firstAttribute="top" secondItem="jTk-re-fIL" secondAttribute="bottom" constant="15" id="6Xm-3W-mPm"/>
                 <constraint firstItem="mLj-Ga-YNR" firstAttribute="leading" secondItem="NZR-Gv-icP" secondAttribute="leading" id="6xG-Fo-XDO"/>
                 <constraint firstItem="jTk-re-fIL" firstAttribute="top" secondItem="mLj-Ga-YNR" secondAttribute="bottom" constant="15" id="77H-2R-6hZ"/>
-                <constraint firstItem="4f1-9H-WoE" firstAttribute="width" secondItem="iqX-2Y-1jz" secondAttribute="width" id="89C-0g-LkR"/>
-                <constraint firstItem="4f1-9H-WoE" firstAttribute="width" secondItem="MKX-4f-IzC" secondAttribute="width" id="8Nr-QQ-I9B"/>
                 <constraint firstItem="EE3-Tl-32e" firstAttribute="top" secondItem="ob4-Nd-bEP" secondAttribute="bottom" constant="8" id="A9m-mo-bVA"/>
+                <constraint firstItem="Sxj-Yf-8Pa" firstAttribute="trailing" secondItem="8AY-d7-GmL" secondAttribute="trailing" id="Agk-2m-2pG"/>
                 <constraint firstItem="EE3-Tl-32e" firstAttribute="leading" secondItem="osp-uu-lXX" secondAttribute="leading" id="Ebr-5g-Enh"/>
                 <constraint firstItem="FWn-0A-DCw" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="Hh4-RX-EQk"/>
                 <constraint firstItem="TSg-3c-8tl" firstAttribute="top" secondItem="EE3-Tl-32e" secondAttribute="bottom" constant="15" id="Hhb-bh-wWb"/>
-                <constraint firstItem="MKX-4f-IzC" firstAttribute="width" secondItem="MKX-4f-IzC" secondAttribute="height" multiplier="151:38" id="QTD-Bw-hcN"/>
+                <constraint firstItem="JOH-t8-NBi" firstAttribute="height" secondItem="Sxj-Yf-8Pa" secondAttribute="height" id="HqW-S1-8ov"/>
+                <constraint firstItem="JOH-t8-NBi" firstAttribute="trailing" secondItem="Sxj-Yf-8Pa" secondAttribute="trailing" id="Irq-1X-wIp"/>
+                <constraint firstItem="JOH-t8-NBi" firstAttribute="leading" secondItem="Sxj-Yf-8Pa" secondAttribute="leading" id="RPI-Y6-HLv"/>
                 <constraint firstItem="TSg-3c-8tl" firstAttribute="trailing" secondItem="EE3-Tl-32e" secondAttribute="trailing" id="Raz-xI-6BR"/>
-                <constraint firstItem="4f1-9H-WoE" firstAttribute="trailing" secondItem="iqX-2Y-1jz" secondAttribute="trailing" id="Tgr-7u-3sp"/>
                 <constraint firstItem="mLj-Ga-YNR" firstAttribute="trailing" secondItem="NZR-Gv-icP" secondAttribute="trailing" id="Xp0-Wu-5W4"/>
+                <constraint firstItem="8AY-d7-GmL" firstAttribute="trailing" secondItem="EE3-Tl-32e" secondAttribute="trailing" id="YGa-0H-AUT"/>
                 <constraint firstAttribute="trailingMargin" secondItem="1Xb-lo-Jrc" secondAttribute="trailing" constant="10" id="YJn-tn-bk9"/>
                 <constraint firstItem="ob4-Nd-bEP" firstAttribute="trailing" secondItem="osp-uu-lXX" secondAttribute="trailing" id="aEJ-fz-7rq"/>
+                <constraint firstItem="Sxj-Yf-8Pa" firstAttribute="centerY" secondItem="jTk-re-fIL" secondAttribute="centerY" id="aIn-ic-3lI"/>
                 <constraint firstItem="1Xb-lo-Jrc" firstAttribute="top" secondItem="TSg-3c-8tl" secondAttribute="bottom" constant="3" id="aRJ-62-YiD"/>
                 <constraint firstAttribute="bottom" secondItem="770-j7-B2d" secondAttribute="bottom" id="bAQ-WI-aN8"/>
                 <constraint firstItem="TSg-3c-8tl" firstAttribute="trailing" secondItem="1Xb-lo-Jrc" secondAttribute="trailing" id="cDM-fa-rlt"/>
                 <constraint firstItem="osp-uu-lXX" firstAttribute="trailing" secondItem="jTk-re-fIL" secondAttribute="trailing" id="cY8-51-TFD"/>
-                <constraint firstItem="MKX-4f-IzC" firstAttribute="trailing" secondItem="4f1-9H-WoE" secondAttribute="trailing" id="dV2-WX-WWW"/>
                 <constraint firstItem="NZR-Gv-icP" firstAttribute="top" secondItem="FWn-0A-DCw" secondAttribute="bottom" constant="8" id="eOL-aN-Mic"/>
                 <constraint firstItem="osp-uu-lXX" firstAttribute="leading" secondItem="jTk-re-fIL" secondAttribute="leading" id="fYE-Mx-7Ul"/>
                 <constraint firstItem="NZR-Gv-icP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="hSv-Kq-wJM"/>
-                <constraint firstItem="MKX-4f-IzC" firstAttribute="centerY" secondItem="osp-uu-lXX" secondAttribute="centerY" id="hba-WL-lPj"/>
                 <constraint firstItem="jTk-re-fIL" firstAttribute="leading" secondItem="mLj-Ga-YNR" secondAttribute="leading" id="i4t-78-eHq"/>
-                <constraint firstItem="4f1-9H-WoE" firstAttribute="width" secondItem="4f1-9H-WoE" secondAttribute="height" multiplier="151:38" id="ikD-fV-j2J"/>
+                <constraint firstItem="JOH-t8-NBi" firstAttribute="centerY" secondItem="osp-uu-lXX" secondAttribute="centerY" id="jCT-LG-JRd"/>
                 <constraint firstItem="770-j7-B2d" firstAttribute="top" secondItem="1Xb-lo-Jrc" secondAttribute="bottom" constant="20" id="kIs-gk-1ce"/>
                 <constraint firstItem="ob4-Nd-bEP" firstAttribute="top" secondItem="osp-uu-lXX" secondAttribute="bottom" constant="15" id="kSD-fw-7aH"/>
-                <constraint firstItem="iqX-2Y-1jz" firstAttribute="trailing" secondItem="NZR-Gv-icP" secondAttribute="trailing" id="kwb-uw-xR3"/>
-                <constraint firstItem="iqX-2Y-1jz" firstAttribute="centerY" secondItem="mLj-Ga-YNR" secondAttribute="centerY" id="m08-Zf-czD"/>
                 <constraint firstItem="TSg-3c-8tl" firstAttribute="leading" secondItem="1Xb-lo-Jrc" secondAttribute="leading" id="mPg-a0-SIa"/>
                 <constraint firstItem="770-j7-B2d" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mXo-xH-9wy"/>
-                <constraint firstItem="4f1-9H-WoE" firstAttribute="centerY" secondItem="jTk-re-fIL" secondAttribute="centerY" id="qEO-xu-PyM"/>
                 <constraint firstItem="jTk-re-fIL" firstAttribute="trailing" secondItem="mLj-Ga-YNR" secondAttribute="trailing" id="qoT-hJ-7u6"/>
                 <constraint firstItem="EE3-Tl-32e" firstAttribute="trailing" secondItem="osp-uu-lXX" secondAttribute="trailing" id="sUo-AV-gj3"/>
+                <constraint firstItem="8AY-d7-GmL" firstAttribute="centerY" secondItem="mLj-Ga-YNR" secondAttribute="centerY" id="tXT-Eo-PRT"/>
                 <constraint firstItem="FWn-0A-DCw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tt1-nN-pB6"/>
-                <constraint firstAttribute="trailingMargin" secondItem="iqX-2Y-1jz" secondAttribute="trailing" id="vSW-oZ-7fx"/>
                 <constraint firstItem="mLj-Ga-YNR" firstAttribute="top" secondItem="NZR-Gv-icP" secondAttribute="top" id="vsW-vi-Yhm"/>
                 <constraint firstItem="mLj-Ga-YNR" firstAttribute="top" secondItem="NZR-Gv-icP" secondAttribute="bottom" constant="20" id="w6j-Gj-faL"/>
                 <constraint firstAttribute="trailing" secondItem="770-j7-B2d" secondAttribute="trailing" id="yVV-qq-Dzy"/>
@@ -158,18 +177,12 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="0U0-iX-uQm"/>
                     <exclude reference="vsW-vi-Yhm"/>
-                    <exclude reference="vSW-oZ-7fx"/>
-                    <exclude reference="ikD-fV-j2J"/>
-                    <exclude reference="3Se-RD-trM"/>
-                    <exclude reference="QTD-Bw-hcN"/>
                     <exclude reference="cDM-fa-rlt"/>
                     <exclude reference="mPg-a0-SIa"/>
                 </mask>
             </variation>
         </view>
     </objects>
-    <resources>
-        <image name="stars" width="263" height="64"/>
-    </resources>
 </document>
