--- a/ios/Travel Safety/Cells/ReviewMiniCell.xib
+++ b/ios/Travel Safety/Cells/ReviewMiniCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -54,6 +54,11 @@
                     </mask>
                 </variation>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="reviewNameLabel" destination="U1I-0f-oyW" id="K08-6B-9fL"/>
+                <outlet property="reviewRightLabel" destination="NR4-Ja-LHH" id="wFb-Y3-QIQ"/>
+                <outlet property="reviewText" destination="FUR-3O-F0Q" id="zS9-Rd-ds9"/>
+            </connections>
             <point key="canvasLocation" x="243" y="400"/>
         </tableViewCell>
     </objects>
