--- a/ios/Travel Safety/Modals/InfoViewController.xib
+++ b/ios/Travel Safety/Modals/InfoViewController.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -12,6 +11,8 @@
                 <outlet property="cityName" destination="ytP-dz-D4J" id="JwI-id-wxr"/>
                 <outlet property="feedbackTable" destination="Ast-om-Y9n" id="B2p-gP-D8y"/>
                 <outlet property="miniReviewTableView" destination="Ast-om-Y9n" id="haf-2P-BsH"/>
+                <outlet property="recommendLabel" destination="e9J-R1-UES" id="Ymy-VI-kSn"/>
+                <outlet property="starSelectView" destination="rM1-rS-Vxv" id="6Xu-MQ-ugb"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -27,55 +28,55 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Metz, France" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytP-dz-D4J">
-                    <rect key="frame" x="20" y="44" width="280" height="21.5"/>
+                    <rect key="frame" x="20" y="44" width="139" height="21.5"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stars" translatesAutoresizingMaskIntoConstraints="NO" id="mtA-UI-VSn">
-                    <rect key="frame" x="61" y="63" width="197" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="mtA-UI-VSn" secondAttribute="height" multiplier="232:47" id="71K-53-w31"/>
-                        <constraint firstAttribute="height" constant="40" id="FQG-JH-iLG"/>
-                    </constraints>
-                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4/7 people recommend" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e9J-R1-UES">
-                    <rect key="frame" x="8" y="101" width="304" height="16"/>
+                    <rect key="frame" x="8" y="71" width="304" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important Statistics" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOy-19-rgb">
-                    <rect key="frame" x="20" y="127" width="280" height="19.5"/>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feedback" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOW-xq-Vid">
-                    <rect key="frame" x="20" y="235" width="280" height="19.5"/>
+                    <rect key="frame" x="20" y="209.5" width="280" height="19.5"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ast-om-Y9n">
-                    <rect key="frame" x="8" y="264.5" width="304" height="202.5"/>
+                    <rect key="frame" x="8" y="239.5" width="304" height="227.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tourist Safety Index: 75" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xMa-GM-PSk">
-                    <rect key="frame" x="25" y="154.5" width="285" height="20.5"/>
+                    <rect key="frame" x="25" y="129.5" width="285" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Travel Index: 68" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYN-im-Kc8">
-                    <rect key="frame" x="25" y="199.5" width="285" height="20.5"/>
+                    <rect key="frame" x="25" y="174.5" width="285" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crime Index: 35" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HTS-hN-gkB">
-                    <rect key="frame" x="25" y="177" width="285" height="20.5"/>
+                    <rect key="frame" x="25" y="151.5" width="285" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rM1-rS-Vxv" customClass="StarSelectView">
+                    <rect key="frame" x="161" y="44" width="139" height="22"/>
+                    <color key="backgroundColor" red="0.28627452250000002" green="0.63137257099999999" blue="0.2392156869" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="22" id="Dzi-Uc-F9w"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important Statistics" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOy-19-rgb">
+                    <rect key="frame" x="20" y="102" width="280" height="19.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -85,6 +86,7 @@
                 <constraint firstAttribute="trailing" secondItem="xMa-GM-PSk" secondAttribute="trailing" constant="10" id="1FZ-xW-mDw"/>
                 <constraint firstAttribute="trailing" secondItem="vOy-19-rgb" secondAttribute="trailing" constant="20" id="1Ov-4O-j4C"/>
                 <constraint firstItem="e9J-R1-UES" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="78G-2h-UkT"/>
+                <constraint firstItem="e9J-R1-UES" firstAttribute="top" secondItem="rM1-rS-Vxv" secondAttribute="bottom" constant="5" id="7RD-En-x2f"/>
                 <constraint firstItem="UOW-xq-Vid" firstAttribute="top" secondItem="bYN-im-Kc8" secondAttribute="bottom" constant="15" id="9LF-Pi-wsQ"/>
                 <constraint firstItem="ytP-dz-D4J" firstAttribute="top" secondItem="BNu-TA-70N" secondAttribute="bottom" constant="8" id="9RF-yJ-HuI"/>
                 <constraint firstAttribute="trailingMargin" secondItem="Ast-om-Y9n" secondAttribute="trailing" id="9bu-wm-K81"/>
@@ -94,20 +96,24 @@
                 <constraint firstItem="xMa-GM-PSk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="25" id="Ltc-Oa-6Eq"/>
                 <constraint firstItem="BNu-TA-70N" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OWO-CL-Nuj"/>
                 <constraint firstItem="UOW-xq-Vid" firstAttribute="leading" secondItem="vOy-19-rgb" secondAttribute="leading" id="PbK-tw-ct2"/>
-                <constraint firstItem="vOy-19-rgb" firstAttribute="top" secondItem="e9J-R1-UES" secondAttribute="bottom" constant="10" id="RhK-0v-oWC"/>
+                <constraint firstItem="vOy-19-rgb" firstAttribute="top" secondItem="e9J-R1-UES" secondAttribute="bottom" constant="15" id="RhK-0v-oWC"/>
                 <constraint firstItem="HTS-hN-gkB" firstAttribute="top" secondItem="xMa-GM-PSk" secondAttribute="bottom" constant="2" id="RrW-7T-fnA"/>
                 <constraint firstItem="UOW-xq-Vid" firstAttribute="top" secondItem="vOy-19-rgb" secondAttribute="bottom" constant="100" id="TCF-re-LJB"/>
                 <constraint firstAttribute="trailingMargin" secondItem="e9J-R1-UES" secondAttribute="trailing" id="USW-no-6Ae"/>
+                <constraint firstItem="rM1-rS-Vxv" firstAttribute="width" secondItem="ytP-dz-D4J" secondAttribute="width" id="Ucs-sv-gBx"/>
+                <constraint firstItem="rM1-rS-Vxv" firstAttribute="centerY" secondItem="ytP-dz-D4J" secondAttribute="centerY" id="Xu7-PE-2x2"/>
                 <constraint firstItem="UOW-xq-Vid" firstAttribute="trailing" secondItem="vOy-19-rgb" secondAttribute="trailing" id="a2x-GB-PqN"/>
-                <constraint firstAttribute="trailing" secondItem="ytP-dz-D4J" secondAttribute="trailing" constant="20" id="bUy-xe-C09"/>
+                <constraint firstItem="rM1-rS-Vxv" firstAttribute="leading" secondItem="ytP-dz-D4J" secondAttribute="trailing" constant="2" id="av5-BD-GFm"/>
                 <constraint firstItem="bYN-im-Kc8" firstAttribute="top" secondItem="HTS-hN-gkB" secondAttribute="bottom" constant="2" id="bcv-wJ-jTl"/>
                 <constraint firstItem="ytP-dz-D4J" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="btt-Lx-kjo"/>
-                <constraint firstItem="e9J-R1-UES" firstAttribute="top" secondItem="mtA-UI-VSn" secondAttribute="bottom" constant="-2" id="dQ0-6N-Dax"/>
-                <constraint firstItem="mtA-UI-VSn" firstAttribute="top" secondItem="ytP-dz-D4J" secondAttribute="bottom" constant="-3" id="f72-pF-Gho"/>
+                <constraint firstAttribute="trailing" secondItem="rM1-rS-Vxv" secondAttribute="trailing" constant="20" id="cdy-Jt-jX7"/>
                 <constraint firstAttribute="bottomMargin" secondItem="Ast-om-Y9n" secondAttribute="bottom" constant="5" id="fle-vA-Efc"/>
-                <constraint firstItem="mtA-UI-VSn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="l9h-75-z4z"/>
+                <constraint firstAttribute="trailing" secondItem="rM1-rS-Vxv" secondAttribute="trailing" constant="20" id="iqJ-Jr-t14"/>
                 <constraint firstItem="HTS-hN-gkB" firstAttribute="trailing" secondItem="bYN-im-Kc8" secondAttribute="trailing" id="lQz-6j-aUn"/>
                 <constraint firstItem="xMa-GM-PSk" firstAttribute="top" secondItem="vOy-19-rgb" secondAttribute="bottom" constant="8" id="n6D-1t-Q0d"/>
+                <constraint firstItem="rM1-rS-Vxv" firstAttribute="top" secondItem="ytP-dz-D4J" secondAttribute="bottom" constant="2" id="oFX-Wl-ctR"/>
+                <constraint firstItem="rM1-rS-Vxv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="r6Z-bU-kii"/>
+                <constraint firstItem="rM1-rS-Vxv" firstAttribute="trailing" secondItem="BNu-TA-70N" secondAttribute="trailing" id="rM7-dX-O4I"/>
                 <constraint firstItem="vOy-19-rgb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="sit-GE-dz9"/>
                 <constraint firstItem="Ast-om-Y9n" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="sjb-0M-Tiw"/>
                 <constraint firstItem="HTS-hN-gkB" firstAttribute="leading" secondItem="bYN-im-Kc8" secondAttribute="leading" id="vgI-Yq-ZcL"/>
@@ -117,12 +123,13 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="cdy-Jt-jX7"/>
+                    <exclude reference="oFX-Wl-ctR"/>
+                    <exclude reference="r6Z-bU-kii"/>
+                    <exclude reference="rM7-dX-O4I"/>
                     <exclude reference="TCF-re-LJB"/>
                 </mask>
             </variation>
         </view>
     </objects>
-    <resources>
-        <image name="stars" width="263" height="64"/>
-    </resources>
 </document>
